--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 }
 .settings {
     display: flex;
+    flex-wrap: wrap;
     color: white;
     padding: 20px;
     border-bottom: 1px solid #4444;
@@ -28,7 +29,25 @@ body {
 
 
 .accidental-selector {
+    display: flex;
+    padding: 6px;
     margin-left: 20px;
+    background: #1d4a63;
+    border-radius: 6px;
+}
+
+.accidentalHeading {
+    padding: 6px;
+    display: flex;
+    border-radius: 6px;
+    background: #44a0d6;
+}
+
+.showAllNotes {
+    padding: 6px;
+    display: flex;
+    border-radius: 6px;
+    background: #44a0d6;
 }
 
 input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
@@ -92,12 +111,12 @@ label {
     border-radius: 50%;
     line-height: 33px;
     text-align: center;
-    background: teal;
+    background: var(--noteDotColor);
     z-index: 2;
     color: #eee;
+    font-weight: bold;
     opacity: var(--noteDotOpacity);
-
-} 
+}
 
 .single-fretmark:after, .double-fretmark:before, .double-fretmark:after {
     content: "";
@@ -139,9 +158,17 @@ label {
 }
 
 .note-name-section span:hover {
-    color: #44a0d6
+    color: #133687
 }
 
+.chord-name-section {
+    width: 100%;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2.5em;
+    display: flex;
+    justify-content: center;
+}
 
 .toggleMode {
     display: flex;
@@ -150,8 +177,35 @@ label {
     margin: 3px;
 }
 
-#toggleModeButton {
-    padding: 3px;
-    margin: 3px;
-    font-weight: bold;
+.note-section-container {
+    display: flex;
+    padding: 12px;
+    background-color: #44a0d6;
+    border-radius: 20px;
+}
+
+.chord-section-container {
+    display: flex;
+    padding: 12px;
+    background-color: #44a0d6;
+    border-radius: 20px;
+}
+
+
+.center-container {
+    display: flex;
+    justify-content: center; /* Horizontally center the content */
+    align-items: center;
+    border-radius: 20px;
+    background-color: #f2f2f2;
+    padding: 10px;
+    width: fit-content; /* Adjust width as needed */
+    margin: 0 auto; /* Automatically center the container horizontally */
+}
+
+.center-text {
+    padding: 8px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
