--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,12 @@ label {
     border-radius: 20px;
 }
 
+.chordDiv {
+    margin: 3px;
+    background-color: #f2f2f2;
+    border-radius: 6px;
+    padding: 2px;
+}
 
 .center-container {
     display: flex;
